--- a/.github/workflows/build-istoreos-6.x.yml
+++ b/.github/workflows/build-istoreos-6.x.yml
@@ -15,7 +15,7 @@ env:
   REPO_URL: https://github.com/xiaomeng9597/istoreos
   # REPO_BRANCH: main
   FEEDS_CONF: feeds.conf
-  CONFIG_FILE: .config2
+  CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part3.sh
   UPLOAD_BIN_DIR: true
