--- a/armv8/feeds.conf
+++ b/armv8/feeds.conf
@@ -4,3 +4,4 @@ src-git routing https://github.com/openwrt/routing.git^e87b55c6a642947ad7e24cd50
 src-git telephony https://github.com/openwrt/telephony.git^fd605af7143165a2490681ec1752f259873b9147
 src-git store https://github.com/linkease/istore.git^c589a6513b4d1af29e289679f15c3e343338049b
 src-git third https://github.com/jjm2473/openwrt-third.git^7a7a881103d546f35307dbafbe60c559713a06b8
+src-git diskman https://github.com/jjm2473/luci-app-diskman.git;dev
