--- a/armv8/feeds.conf
+++ b/armv8/feeds.conf
@@ -5,3 +5,6 @@ src-git telephony https://github.com/openwrt/telephony.git^fd605af7143165a249068
 src-git store https://github.com/linkease/istore.git^c589a6513b4d1af29e289679f15c3e343338049b
 src-git third https://github.com/jjm2473/openwrt-third.git^7a7a881103d546f35307dbafbe60c559713a06b8
 src-git diskman https://github.com/jjm2473/luci-app-diskman.git;dev
+src-git linkease_nas https://github.com/linkease/nas-packages.git;master
+src-git linkease_nas_luci https://github.com/linkease/nas-packages-luci.git;main
+src-git jjm2473_apps https://github.com/jjm2473/openwrt-apps.git;main
