--- a/armv8/.config
+++ b/armv8/.config
@@ -111,6 +111,7 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libxtables=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
