--- a/armv8/feeds.conf
+++ b/armv8/feeds.conf
@@ -1,10 +1,8 @@
-src-git packages https://github.com/jjm2473/packages.git^532b7076d304eb4b5e5463fcff14217872aa6647
-src-git luci https://github.com/jjm2473/luci.git^c83b825b769eb88e5db69131435dc0a3c36c061b
-src-git routing https://github.com/openwrt/routing.git^e87b55c6a642947ad7e24cd5054a637df63d5dbe
-src-git telephony https://github.com/openwrt/telephony.git^fd605af7143165a2490681ec1752f259873b9147
-src-git store https://github.com/linkease/istore.git^c589a6513b4d1af29e289679f15c3e343338049b
-src-git third https://github.com/jjm2473/openwrt-third.git^7a7a881103d546f35307dbafbe60c559713a06b8
+src-include defaults feeds.conf.default
+src-git h69k_oled https://github.com/jjm2473/luci-app-oled.git;master
+src-git third_party https://github.com/linkease/istore-packages.git;main
 src-git diskman https://github.com/jjm2473/luci-app-diskman.git;dev
+src-git oaf https://github.com/jjm2473/OpenAppFilter.git;dev4
 src-git linkease_nas https://github.com/linkease/nas-packages.git;master
 src-git linkease_nas_luci https://github.com/linkease/nas-packages-luci.git;main
 src-git jjm2473_apps https://github.com/jjm2473/openwrt-apps.git;main
