--- a/.github/workflows/build-istoreos-6.x.yml
+++ b/.github/workflows/build-istoreos-6.x.yml
@@ -16,8 +16,8 @@ env:
   # REPO_BRANCH: main
   FEEDS_CONF: feeds.conf
   CONFIG_FILE: .config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part3.sh
+  DIY_P1_SH: diy-part1-6.x.sh
+  DIY_P2_SH: diy-part3-6.x.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
