--- a/rk35xx/.config
+++ b/rk35xx/.config
@@ -932,6 +932,7 @@ CONFIG_TARGET_DEVICE_rockchip_rk35xx_DEVICE_xunlong_orangepi-5-plus=y
 CONFIG_TARGET_DEVICE_rockchip_rk35xx_DEVICE_cyber3588_aib=y
 CONFIG_PACKAGE_brcmfmac-firmware-panther-x2=y
 CONFIG_PACKAGE_brcmfmac-firmware-jp-tvbox=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_hd-idle=y
