--- a/configfiles/rk3588-orangepi-5-plus.dts
+++ b/configfiles/rk3588-orangepi-5-plus.dts
@@ -215,16 +215,16 @@
 		vin-supply = <&vcc5v0_sys>;
 	};
 
-	vbus5v0_typec: vbus5v0-typec {
+	vbus5v0_typec: vbus5v0-typec-regulator {
 		compatible = "regulator-fixed";
+		enable-active-high;
+		gpio = <&gpio4 RK_PB0 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&typec5v_pwren>;
 		regulator-name = "vbus5v0_typec";
 		regulator-min-microvolt = <5000000>;
 		regulator-max-microvolt = <5000000>;
-		enable-active-high;
-		gpio = <&gpio4 RK_PB0 GPIO_ACTIVE_HIGH>;
 		vin-supply = <&vcc5v0_sys>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&typec5v_pwren>;
 	};
 };
 
@@ -347,71 +347,53 @@
 	clock-frequency = <400000>;
 	status = "okay";
 
-    usbc0: fusb302@22 {
-        compatible = "fcs,fusb302";
-        reg = <0x22>;
-        interrupt-parent = <&gpio0>;
-        interrupts = <RK_PD3 IRQ_TYPE_LEVEL_LOW>;
-        pinctrl-names = "default";
-        pinctrl-0 = <&usbc0_int>;
-        vbus-supply = <&vbus5v0_typec>;
-        status = "okay";
+	usbc0: usb-typec@22 {
+		compatible = "fcs,fusb302";
+		reg = <0x22>;
+		interrupt-parent = <&gpio0>;
+		interrupts = <RK_PD3 IRQ_TYPE_LEVEL_LOW>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&usbc0_int>;
+		vbus-supply = <&vbus5v0_typec>;
+		status = "okay";
 
-        ports {
-            #address-cells = <1>;
-            #size-cells = <0>;
+		usb_con: connector {
+			compatible = "usb-c-connector";
+			data-role = "dual";
+			label = "USB-C";
+			power-role = "dual";
+			op-sink-microwatt = <1000000>;
+			source-pdos = <PDO_FIXED(5000, 3000, PDO_FIXED_USB_COMM)>;
+			sink-pdos = <PDO_FIXED(5000, 1000, PDO_FIXED_USB_COMM)>;
+			try-power-role = "source";
 
-            port@0 {
-                reg = <0>;
-                usbc0_role_sw: endpoint@0 {
-                    remote-endpoint = <&dwc3_0_role_switch>;
-                };
-            };
-        };
+			ports {
+				#address-cells = <1>;
+				#size-cells = <0>;
 
-        usb_con: connector {
-            compatible = "usb-c-connector";
-            label = "USB-C";
-            data-role = "dual";
-            power-role = "dual";
-            try-power-role = "sink";
-            op-sink-microwatt = <1000000>;
-            sink-pdos =
-                <PDO_FIXED(5000, 1000, PDO_FIXED_USB_COMM)>;
-            source-pdos =
-                <PDO_FIXED(5000, 3000, PDO_FIXED_USB_COMM)>;
+				port@0 {
+					reg = <0>;
+					usbc0_hs: endpoint {
+						remote-endpoint = <&usb_host0_xhci_drd_sw>;
+					};
+				};
 
-            altmodes {
-                #address-cells = <1>;
-                #size-cells = <0>;
+				port@1 {
+					reg = <1>;
+					usbc0_ss: endpoint {
+						remote-endpoint = <&usbdp_phy0_typec_ss>;
+					};
+				};
 
-                altmode@0 {
-                    reg = <0>;
-                    svid = <0xff01>;
-                    vdo = <0xffffffff>;
-                };
-            };
-
-            ports {
-                #address-cells = <1>;
-                #size-cells = <0>;
-
-                port@0 {
-                    reg = <0>;
-                    usbc0_orien_sw: endpoint {
-                        remote-endpoint = <&usbdp_phy0_orientation_switch>;
-                    };
-                };
-
-                port@1 {
-                    reg = <1>;
-                    dp_altmode_mux: endpoint {
-                        remote-endpoint = <&usbdp_phy0_dp_altmode_mux>;
-                    };
-                };
-            };
-        };
-    };
+				port@2 {
+					reg = <2>;
+					usbc0_sbu: endpoint {
+						remote-endpoint = <&usbdp_phy0_typec_sbu>;
+					};
+				};
+			};
+		};
+	};
 
 	hym8563: rtc@51 {
 		compatible = "haoyu,hym8563";
@@ -981,25 +963,26 @@
 };
 
 &usbdp_phy0 {
-    orientation-switch;
-    svid = <0xff01>;
-    sbu1-dc-gpios = <&gpio4 RK_PA6 GPIO_ACTIVE_HIGH>;
-    sbu2-dc-gpios = <&gpio4 RK_PA7 GPIO_ACTIVE_HIGH>;
-    status = "okay";
+	mode-switch;
+	orientation-switch;
+	sbu1-dc-gpios = <&gpio4 RK_PA6 GPIO_ACTIVE_HIGH>;
+	sbu2-dc-gpios = <&gpio4 RK_PA7 GPIO_ACTIVE_HIGH>;
+	status = "okay";
 
-    port {
-        #address-cells = <1>;
-        #size-cells = <0>;
-        usbdp_phy0_orientation_switch: endpoint@0 {
-            reg = <0>;
-            remote-endpoint = <&usbc0_orien_sw>;
-        };
+	port {
+		#address-cells = <1>;
+		#size-cells = <0>;
 
-        usbdp_phy0_dp_altmode_mux: endpoint@1 {
-            reg = <1>;
-            remote-endpoint = <&dp_altmode_mux>;
-        };
-    };
+		usbdp_phy0_typec_ss: endpoint@0 {
+			reg = <0>;
+			remote-endpoint = <&usbc0_ss>;
+		};
+
+		usbdp_phy0_typec_sbu: endpoint@1 {
+			reg = <1>;
+			remote-endpoint = <&usbc0_sbu>;
+		};
+	};
 };
 
 &usbdp_phy1 {
@@ -1015,17 +998,14 @@
 };
 
 &usb_host0_xhci {
-    usb-role-switch;
-    status = "okay";
-    dr_mode = "otg";
-    port {
-        #address-cells = <1>;
-        #size-cells = <0>;
-        dwc3_0_role_switch: endpoint@0 {
-            reg = <0>;
-            remote-endpoint = <&usbc0_role_sw>;
-        };
-    };
+	usb-role-switch;
+	status = "okay";
+
+	port {
+		usb_host0_xhci_drd_sw: endpoint {
+			remote-endpoint = <&usbc0_hs>;
+		};
+	};
 };
 
 &usb_host1_ehci {
@@ -1039,4 +1019,14 @@
 &usb_host1_xhci {
 	dr_mode = "host";
 	status = "okay";
+};
+
+&rknpu {
+    rknpu-supply = <&vdd_npu_s0>;
+    mem-supply = <&vdd_npu_mem_s0>;
+    status = "okay";
+};
+
+&rknpu_mmu {
+    status = "okay";
 };
