--- a/armv8/.config
+++ b/armv8/.config
@@ -123,6 +123,7 @@ CONFIG_PACKAGE_dtc=y
 CONFIG_PACKAGE_e100-firmware=y
 CONFIG_PACKAGE_edgeport-firmware=y
 CONFIG_PACKAGE_etherwake=y
+CONFIG_PACKAGE_external-protocol=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_gre=y
@@ -139,12 +140,15 @@ CONFIG_PACKAGE_iwlwifi-firmware-ax101=y
 CONFIG_PACKAGE_iwlwifi-firmware-ax200=y
 CONFIG_PACKAGE_iwlwifi-firmware-ax201=y
 CONFIG_PACKAGE_iwlwifi-firmware-ax210=y
+CONFIG_PACKAGE_iwlwifi-firmware-ax211=y
 CONFIG_PACKAGE_iwlwifi-firmware-ax411=y
 CONFIG_PACKAGE_iwlwifi-firmware-be200=y
 CONFIG_PACKAGE_kmod-aoe=y
 CONFIG_PACKAGE_kmod-asn1-decoder=y
 CONFIG_PACKAGE_kmod-asn1-encoder=y
 CONFIG_PACKAGE_kmod-ata-ahci=y
+# CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers is not set
+# CONFIG_PACKAGE_kmod-ath10k-smallbuffers is not set
 CONFIG_PACKAGE_kmod-atm=y
 CONFIG_PACKAGE_kmod-backlight=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
@@ -279,6 +283,11 @@ CONFIG_PACKAGE_kmod-md-raid1=y
 CONFIG_PACKAGE_kmod-md-raid10=y
 CONFIG_PACKAGE_kmod-md-raid456=y
 CONFIG_PACKAGE_kmod-media-controller=y
+CONFIG_PACKAGE_kmod-mhi-bus=y
+CONFIG_PACKAGE_kmod-mhi-net=y
+CONFIG_PACKAGE_kmod-mhi-pci-generic=y
+CONFIG_PACKAGE_kmod-mhi-wwan-ctrl=y
+CONFIG_PACKAGE_kmod-mhi-wwan-mbim=y
 CONFIG_PACKAGE_kmod-mmc=y
 CONFIG_PACKAGE_kmod-mppe=y
 CONFIG_PACKAGE_kmod-mt76-connac=y
@@ -287,6 +296,7 @@ CONFIG_PACKAGE_kmod-mt76-usb=y
 CONFIG_PACKAGE_kmod-mt7615-common=y
 CONFIG_PACKAGE_kmod-mt7615-firmware=y
 CONFIG_PACKAGE_kmod-mt7615e=y
+CONFIG_PACKAGE_kmod-mt7622-firmware=y
 CONFIG_PACKAGE_kmod-mt7663-firmware-ap=y
 CONFIG_PACKAGE_kmod-mt7663-usb-sdio=y
 CONFIG_PACKAGE_kmod-mt7663u=y
@@ -304,8 +314,19 @@ CONFIG_PACKAGE_kmod-mt7921-firmware=y
 CONFIG_PACKAGE_kmod-mt7921e=y
 CONFIG_PACKAGE_kmod-mt7921u=y
 CONFIG_PACKAGE_kmod-mt7922-firmware=y
+CONFIG_PACKAGE_kmod-mt7925-common=y
+CONFIG_PACKAGE_kmod-mt7925-firmware=y
+CONFIG_PACKAGE_kmod-mt7925e=y
+CONFIG_PACKAGE_kmod-mt7925u=y
 CONFIG_PACKAGE_kmod-mt792x-common=y
 CONFIG_PACKAGE_kmod-mt792x-usb=y
+CONFIG_PACKAGE_kmod-mt7992-23-firmware=y
+CONFIG_PACKAGE_kmod-mt7992-firmware=y
+CONFIG_PACKAGE_kmod-mt7996-233-firmware=y
+CONFIG_PACKAGE_kmod-mt7996-firmware=y
+CONFIG_PACKAGE_kmod-mt7996-firmware-common=y
+CONFIG_PACKAGE_kmod-mt7996e=y
+CONFIG_PACKAGE_kmod-mtk-t7xx=y
 CONFIG_PACKAGE_kmod-mwifiex-pcie=y
 CONFIG_PACKAGE_kmod-nat46=y
 CONFIG_PACKAGE_kmod-nbd=y
@@ -343,6 +364,9 @@ CONFIG_PACKAGE_kmod-pppol2tp=y
 CONFIG_PACKAGE_kmod-pps=y
 CONFIG_PACKAGE_kmod-pptp=y
 CONFIG_PACKAGE_kmod-ptp=y
+CONFIG_PACKAGE_kmod-qrtr=y
+CONFIG_PACKAGE_kmod-qrtr-mhi=y
+CONFIG_PACKAGE_kmod-qrtr-tun=y
 CONFIG_PACKAGE_kmod-r8125=y
 CONFIG_PACKAGE_kmod-r8126=y
 CONFIG_PACKAGE_kmod-r8168=y
@@ -485,6 +509,7 @@ CONFIG_PACKAGE_kmod-video-uvc=y
 CONFIG_PACKAGE_kmod-video-videobuf2=y
 CONFIG_PACKAGE_kmod-vxlan=y
 CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_kmod-wwan=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_libatomic=y
@@ -618,6 +643,7 @@ CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-3g=y
+CONFIG_PACKAGE_luci-proto-external=y
 CONFIG_PACKAGE_luci-proto-gre=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-mbim=y
@@ -626,6 +652,7 @@ CONFIG_PACKAGE_luci-proto-ncm=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-qmi=y
 CONFIG_PACKAGE_luci-proto-relay=y
+CONFIG_PACKAGE_luci-proto-unet=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mdadm=y
@@ -748,6 +775,8 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_umbim=y
+CONFIG_PACKAGE_unet-cli=y
+CONFIG_PACKAGE_unetd=y
 CONFIG_PACKAGE_unishare=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_uqmi=y
@@ -779,6 +808,7 @@ CONFIG_TARGET_ALL_PROFILES=y
 CONFIG_TARGET_KERNEL_PARTSIZE=64
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=256
+CONFIG_UNETD_VXLAN_SUPPORT=y
 CONFIG_USE_LLVM_BUILD=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_BUG_URL=""
