--- a/armv8/.config
+++ b/armv8/.config
@@ -13,6 +13,9 @@ CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_friendlyarm_nanopi-r6s=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_h88k=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_hinlink_opc-h6xk=y
+CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_radxa_e20c=y
+CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_radxa_e52c=y
+CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_radxa_e54c=y
 CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_xunlong_orangepi-5-plus=y
 CONFIG_ALL_KMODS=y
 CONFIG_DEVEL=y
@@ -379,7 +382,6 @@ CONFIG_PACKAGE_kmod-qrtr-mhi=y
 CONFIG_PACKAGE_kmod-qrtr-tun=y
 CONFIG_PACKAGE_kmod-r8125=y
 CONFIG_PACKAGE_kmod-r8126=y
-CONFIG_PACKAGE_kmod-r8168=y
 CONFIG_PACKAGE_kmod-r8169=m
 CONFIG_PACKAGE_kmod-random-core=y
 CONFIG_PACKAGE_kmod-regmap-core=y
@@ -438,9 +440,6 @@ CONFIG_PACKAGE_kmod-sctp=y
 CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-sound-core=y
 # CONFIG_PACKAGE_kmod-struct-dump is not set
-CONFIG_PACKAGE_kmod-swconfig=y
-CONFIG_PACKAGE_kmod-switch-rtl8366-smi=y
-CONFIG_PACKAGE_kmod-switch-rtl8367b=y
 CONFIG_PACKAGE_kmod-tls=y
 CONFIG_PACKAGE_kmod-tpm=y
 CONFIG_PACKAGE_kmod-trelay=y
@@ -593,10 +592,10 @@ CONFIG_PACKAGE_libxtables=y
 CONFIG_PACKAGE_linkease=y
 CONFIG_PACKAGE_linkmount=y
 CONFIG_PACKAGE_lm-sensors=y
-CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lrzsz=y
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
@@ -682,33 +681,6 @@ CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_parted=y
 CONFIG_PACKAGE_pciids=y
 CONFIG_PACKAGE_pciutils=y
-CONFIG_PACKAGE_perl=y
-CONFIG_PACKAGE_perlbase-base=y
-CONFIG_PACKAGE_perlbase-bytes=y
-CONFIG_PACKAGE_perlbase-class=y
-CONFIG_PACKAGE_perlbase-config=y
-CONFIG_PACKAGE_perlbase-cwd=y
-CONFIG_PACKAGE_perlbase-errno=y
-CONFIG_PACKAGE_perlbase-essential=y
-CONFIG_PACKAGE_perlbase-fcntl=y
-CONFIG_PACKAGE_perlbase-file=y
-CONFIG_PACKAGE_perlbase-filehandle=y
-CONFIG_PACKAGE_perlbase-i18n=y
-CONFIG_PACKAGE_perlbase-integer=y
-CONFIG_PACKAGE_perlbase-io=y
-CONFIG_PACKAGE_perlbase-list=y
-CONFIG_PACKAGE_perlbase-locale=y
-CONFIG_PACKAGE_perlbase-params=y
-CONFIG_PACKAGE_perlbase-posix=y
-CONFIG_PACKAGE_perlbase-re=y
-CONFIG_PACKAGE_perlbase-scalar=y
-CONFIG_PACKAGE_perlbase-selectsaver=y
-CONFIG_PACKAGE_perlbase-socket=y
-CONFIG_PACKAGE_perlbase-symbol=y
-CONFIG_PACKAGE_perlbase-tie=y
-CONFIG_PACKAGE_perlbase-unicore=y
-CONFIG_PACKAGE_perlbase-utf8=y
-CONFIG_PACKAGE_perlbase-xsloader=y
 CONFIG_PACKAGE_procps-ng=y
 CONFIG_PACKAGE_procps-ng-vmstat=y
 CONFIG_PACKAGE_proto-bonding=y
@@ -777,7 +749,6 @@ CONFIG_PACKAGE_smartd=y
 CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_strace=y
 CONFIG_PACKAGE_swap-utils=y
-CONFIG_PACKAGE_swconfig=y
 CONFIG_PACKAGE_sysfsutils=y
 CONFIG_PACKAGE_sysstat=y
 CONFIG_PACKAGE_tcpdump=y
@@ -807,8 +778,6 @@ CONFIG_PACKAGE_xtables-nft=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_PACKAGE_zram-swap=y
 CONFIG_PARTED_READLINE=y
-CONFIG_PERL_NOCOMMENT=y
-CONFIG_PERL_THREADS=y
 CONFIG_REPRODUCIBLE_DEBUG_INFO=y
 CONFIG_RPCBIND_LIBWRAP=y
 CONFIG_RPCBIND_RMTCALLS=y
