--- a/armv8/.config
+++ b/armv8/.config
@@ -592,6 +592,7 @@ CONFIG_PACKAGE_libxtables=y
 CONFIG_PACKAGE_linkease=y
 CONFIG_PACKAGE_linkmount=y
 CONFIG_PACKAGE_lm-sensors=y
+CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lrzsz=y
 CONFIG_PACKAGE_lsblk=y
