--- a/.github/workflows/build-istoreos-x86.yml
+++ b/.github/workflows/build-istoreos-x86.yml
@@ -16,8 +16,8 @@ env:
   # REPO_BRANCH: main
   FEEDS_CONF: feeds.conf
   CONFIG_FILE: .config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  DIY_P1_SH: diy-part1-6.x.sh
+  DIY_P2_SH: diy-part2-6.x-x86.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
@@ -31,16 +31,12 @@ jobs:
       matrix:
         REPO_BRANCH:
           # - main
-          - istoreos-22.03
+          - istoreos-24.10
           # - istoreos-23.05
         ARCHITECTURE:
           - x86
         os:
           - ubuntu-22.04
-        include:
-          - REPO_BRANCH: istoreos-22.03
-            ARCHITECTURE: x86-alpha
-            os: ubuntu-22.04
 
       fail-fast: false
 
