--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -15,40 +15,26 @@ jobs:
 
     - name: 下载架构编译配置文件
       run: |
-        mkdir -p ./rk35xx
-        rm -f ./rk35xx/.config
-        wget -O ./rk35xx/feeds.conf https://fw0.koolcenter.com/iStoreOS/station-p2/feeds.conf --no-check-certificate
-        wget -O ./rk35xx/.config https://fw0.koolcenter.com/iStoreOS/station-p2/config.buildinfo --no-check-certificate
+        # mkdir -p ./armv8
+        # rm -f ./armv8/.config
+        # wget -O ./armv8/feeds.conf https://fw.koolcenter.com/iStoreOS/easepi-r1/feeds.conf --no-check-certificate
+        # wget -O ./armv8/.config https://fw.koolcenter.com/iStoreOS/easepi-r1/config.buildinfo --no-check-certificate
 
-        FILE_PATH="./rk35xx/.config"
-        if [ -f "$FILE_PATH" ] && [ -s "$FILE_PATH" ]; then
-           content=$(cat ${GITHUB_WORKSPACE}/configfiles/config_data.txt)
-           configdata=$(echo "$content" | sed 's/^[[:space:]]*//; s/[[:space:]]*$//')
-           sed -i "/CONFIG_TARGET_DEVICE_rockchip_.*=.*/d" ./rk35xx/.config
-           sed -i "/CONFIG_PACKAGE_dtc.*=.*/d" ./rk35xx/.config
-           sed -i "/CONFIG_PACKAGE_luci-app-istorex.*=.*/d" ./rk35xx/.config
-           sed -i "/#\s*CONFIG_TARGET_DEVICE_rockchip_rk35xx_DEVICE_jp_tvbox\s*is\s*not\s*set/d" ./rk35xx/.config
-           sed -i "/#\s*CONFIG_TARGET_DEVICE_rockchip_rk35xx_DEVICE_panther_x2\s*is\s*not\s*set/d" ./rk35xx/.config
-           sed -i "/#\s*CONFIG_TARGET_DEVICE_rockchip_rk35xx_DEVICE_dg_nas\s*is\s*not\s*set/d" ./rk35xx/.config
-           # sed -i "s/CONFIG_PACKAGE_rtl8821ce-firmware=y/CONFIG_PACKAGE_rtl8821ce-firmware=n/" ./rk35xx/.config
-           sed -i "s/^\(CONFIG_PACKAGE_rtl[0-9a-z-]*firmware\)=y$/\1=n/" ./rk35xx/.config
-           sed -i "s/CONFIG_PACKAGE_kmod-rtw88-oot=y/CONFIG_PACKAGE_kmod-rtw88-oot=n/" ./rk35xx/.config
-           sed -i "s/CONFIG_PACKAGE_kmod-rtw89-oot=y/CONFIG_PACKAGE_kmod-rtw89-oot=n/" ./rk35xx/.config
-           echo -e "\\n$configdata" >> ./rk35xx/.config
+        # FILE_PATH="./armv8/.config"
+        # if [ -f "$FILE_PATH" ] && [ -s "$FILE_PATH" ]; then
+           # content=$(cat ${GITHUB_WORKSPACE}/configfiles/config_data-6.x.txt)
+           # configdata=$(echo "$content" | sed 's/^[[:space:]]*//; s/[[:space:]]*$//')
+           # echo -e "\\n$configdata" >> ./armv8/.config
            # 清除.config配置文件里面重复的配置项
-           configdata2=$(cat ./rk35xx/.config)
-           echo "$configdata2" | awk '!seen[$0]++' > ./rk35xx/.config
-        else
-           echo "不处理数据。"
-        fi
+           # configdata2=$(cat ./armv8/.config)
+           # echo "$configdata2" | awk '!seen[$0]++' > ./armv8/.config
+        # else
+           # echo "不处理数据。"
+        # fi
 
         mkdir -p ./x86
-        wget -O ./x86/feeds.conf https://fw0.koolcenter.com/iStoreOS/x86_64_efi/feeds.conf --no-check-certificate
-        wget -O ./x86/.config https://fw0.koolcenter.com/iStoreOS/x86_64_efi/config.buildinfo --no-check-certificate
-
-        mkdir -p ./x86-alpha
-        wget -O ./x86-alpha/feeds.conf https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/feeds.conf --no-check-certificate
-        wget -O ./x86-alpha/.config https://fw0.koolcenter.com/iStoreOS/alpha/x86_64_efi/config.buildinfo --no-check-certificate
+        wget -O ./x86/feeds.conf https://fw.koolcenter.com/iStoreOS/x86_64_efi/feeds.conf --no-check-certificate
+        wget -O ./x86/.config https://fw.koolcenter.com/iStoreOS/x86_64_efi/config.buildinfo --no-check-certificate
 
     - name: 同步配置
       uses: peaceiris/actions-gh-pages@v3
