--- a/armv8/.config
+++ b/armv8/.config
@@ -61,6 +61,7 @@ CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
 CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
 CONFIG_KERNEL_NET_CLS_CGROUP=y
 CONFIG_KERNEL_PERF_EVENTS=y
+CONFIG_KERNEL_PSI=y
 CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y
 CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
 CONFIG_KERNEL_XDP_SOCKETS=y
@@ -382,7 +383,6 @@ CONFIG_PACKAGE_kmod-qrtr-mhi=y
 CONFIG_PACKAGE_kmod-qrtr-tun=y
 CONFIG_PACKAGE_kmod-r8125=y
 CONFIG_PACKAGE_kmod-r8126=y
-CONFIG_PACKAGE_kmod-r8169=m
 CONFIG_PACKAGE_kmod-random-core=y
 CONFIG_PACKAGE_kmod-regmap-core=y
 CONFIG_PACKAGE_kmod-regmap-i2c=y
@@ -687,7 +687,6 @@ CONFIG_PACKAGE_procps-ng-vmstat=y
 CONFIG_PACKAGE_proto-bonding=y
 CONFIG_PACKAGE_qmi-utils=y
 CONFIG_PACKAGE_quickstart=y
-CONFIG_PACKAGE_r8169-firmware=m
 CONFIG_PACKAGE_relayd=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcbind=y
@@ -807,7 +806,6 @@ CONFIG_VERSION_SUPPORT_URL=""
 CONFIG_shadow-all=y
 # CONFIG_PACKAGE_brcmfmac-nvram-4356-sdio is not set
 # CONFIG_PACKAGE_cypress-firmware-4356-sdio is not set
-CONFIG_PACKAGE_kmod-phy-realtek=y
 CONFIG_PACKAGE_kmod-rtw88-8723ds=m
 CONFIG_PACKAGE_kmod-rtw88-sdio=m
 CONFIG_PACKAGE_libmbedtls=y
