--- a/armv8/.config
+++ b/armv8/.config
@@ -193,7 +193,10 @@ CONFIG_PACKAGE_kmod-dax=y
 CONFIG_PACKAGE_kmod-dm=y
 CONFIG_PACKAGE_kmod-dm-raid=y
 CONFIG_PACKAGE_kmod-dnsresolver=y
+CONFIG_PACKAGE_kmod-drm-display-helper=y
+CONFIG_PACKAGE_kmod-drm-dma-helper=y
 CONFIG_PACKAGE_kmod-drm-kms-helper=y
+CONFIG_PACKAGE_kmod-drm-rockchip=y
 CONFIG_PACKAGE_kmod-drm-shmem-helper=y
 CONFIG_PACKAGE_kmod-drm-udl=y
 CONFIG_PACKAGE_kmod-dummy=y
@@ -522,6 +525,7 @@ CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_kmod-wwan=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-zram=y
+CONFIG_PACKAGE_lcdsimple=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libavahi-client=y
 CONFIG_PACKAGE_libavahi-dbus-support=y
@@ -536,6 +540,7 @@ CONFIG_PACKAGE_libevdev=y
 CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffi=y
+CONFIG_PACKAGE_libfreetype=y
 CONFIG_PACKAGE_libfuse=y
 CONFIG_PACKAGE_libgcrypt=y
 CONFIG_PACKAGE_libgdbm=y
@@ -567,6 +572,7 @@ CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpci=y
 CONFIG_PACKAGE_libpcre2=y
 CONFIG_PACKAGE_libplist=y
+CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libqmi=y
 CONFIG_PACKAGE_libqrtr-glib=y
@@ -591,7 +597,6 @@ CONFIG_PACKAGE_libxtables=y
 CONFIG_PACKAGE_linkease=y
 CONFIG_PACKAGE_linkmount=y
 CONFIG_PACKAGE_lm-sensors=y
-CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lrzsz=y
 CONFIG_PACKAGE_lsblk=y
@@ -808,26 +813,6 @@ CONFIG_shadow-all=y
 CONFIG_PACKAGE_kmod-rtw88-8723ds=m
 CONFIG_PACKAGE_kmod-rtw88-sdio=m
 CONFIG_PACKAGE_libmbedtls=y
-CONFIG_PACKAGE_kmod-mac80211=y
-CONFIG_PACKAGE_hd-idle=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
-CONFIG_PACKAGE_nginx=y
-CONFIG_PACKAGE_nginx-ssl=y
-CONFIG_PACKAGE_nginx-ssl-util=y
-CONFIG_PACKAGE_nginx-util=y
-CONFIG_PACKAGE_nginx-mod-luci=y
-CONFIG_PACKAGE_luci-nginx=y
-CONFIG_PACKAGE_ntpdate=y
-CONFIG_PACKAGE_hdparm=y
-CONFIG_PACKAGE_stress=y
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-base64=y
-CONFIG_PACKAGE_coreutils-stty=y
-CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_luci-app-store=y
-CONFIG_PACKAGE_luci-app-eqosplus=y
-CONFIG_PACKAGE_luci-i18n-eqosplus-zh-cn=y
 # CONFIG_PACKAGE_trusted-firmware-a-rk3308-rock-pi-s is not set
 # CONFIG_PACKAGE_trusted-firmware-a-rk3568-e25 is not set
 # CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_armsom_sige7 is not set
@@ -860,3 +845,24 @@ CONFIG_PACKAGE_luci-i18n-eqosplus-zh-cn=y
 # CONFIG_TARGET_DEVICE_rockchip_armv8_DEVICE_xunlong_orangepi-r1-plus-lts is not set
 # CONFIG_VERSION_CODE_FILENAMES is not set
 # CONFIG_VERSION_FILENAMES is not set
+CONFIG_PACKAGE_lm-sensors-detect=y
+CONFIG_PACKAGE_kmod-mac80211=y
+CONFIG_PACKAGE_hd-idle=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+CONFIG_PACKAGE_nginx=y
+CONFIG_PACKAGE_nginx-ssl=y
+CONFIG_PACKAGE_nginx-ssl-util=y
+CONFIG_PACKAGE_nginx-util=y
+CONFIG_PACKAGE_nginx-mod-luci=y
+CONFIG_PACKAGE_luci-nginx=y
+CONFIG_PACKAGE_ntpdate=y
+CONFIG_PACKAGE_hdparm=y
+CONFIG_PACKAGE_stress=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-stty=y
+CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_luci-app-eqosplus=y
+CONFIG_PACKAGE_luci-i18n-eqosplus-zh-cn=y
