--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -17,15 +17,15 @@ jobs:
       run: |
         mkdir -p ./armv8
         rm -f ./armv8/.config
-        wget -O ./armv8/feeds.conf https://fw.koolcenter.com/iStoreOS/easepi-r1/feeds.conf --no-check-certificate
-        wget -O ./armv8/.config https://fw.koolcenter.com/iStoreOS/easepi-r1/config.buildinfo --no-check-certificate
+        wget -O ./armv8/feeds.conf https://fw0.koolcenter.com/iStoreOS/easepi-r1/feeds.conf --no-check-certificate
+        wget -O ./armv8/.config https://fw0.koolcenter.com/iStoreOS/easepi-r1/config.buildinfo --no-check-certificate
 
         FILE_PATH="./armv8/.config"
         if [ -f "$FILE_PATH" ] && [ -s "$FILE_PATH" ]; then
            content=$(cat ${GITHUB_WORKSPACE}/configfiles/config_data-6.x.txt)
            configdata=$(echo "$content" | sed 's/^[[:space:]]*//; s/[[:space:]]*$//')
            echo -e "\\n$configdata" >> ./armv8/.config
-           清除.config配置文件里面重复的配置项
+           # 清除.config配置文件里面重复的配置项
            configdata2=$(cat ./armv8/.config)
            echo "$configdata2" | awk '!seen[$0]++' > ./armv8/.config
         else
@@ -33,8 +33,8 @@ jobs:
         fi
 
         mkdir -p ./x86
-        wget -O ./x86/feeds.conf https://fw.koolcenter.com/iStoreOS/x86_64_efi/feeds.conf --no-check-certificate
-        wget -O ./x86/.config https://fw.koolcenter.com/iStoreOS/x86_64_efi/config.buildinfo --no-check-certificate
+        wget -O ./x86/feeds.conf https://fw0.koolcenter.com/iStoreOS/x86_64_efi/feeds.conf --no-check-certificate
+        wget -O ./x86/.config https://fw0.koolcenter.com/iStoreOS/x86_64_efi/config.buildinfo --no-check-certificate
 
     - name: 同步配置
       uses: peaceiris/actions-gh-pages@v3
