--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -27,7 +27,7 @@ jobs:
            echo -e "\\n$configdata" >> ./armv8/.config
            # 清除.config配置文件里面重复的配置项
            configdata2=$(cat ./armv8/.config)
-           echo "$configdata2" | awk '!seen[$0]++' > ./armv8/.config
+           echo "$configdata2" | awk '!seen[$0]++' | tr -d '\n' > ./armv8/.config
         else
            echo "不处理数据。"
         fi
